=================
buildstream 1.3.1
=================

  o BREAKING CHANGE: Reverted the default behaviour of junctions. Subproject
    elements will no longer interact with the parent project's remote (by
    default). To enable this behaviour, a new "cache-junction-elements" boolean
    can be optionally declared as part of your junction element's configuration.
    Additionally, a new "ignore-junction-remotes" option has also been
    introduced. This allows you to completely ignore subproject remotes when
    using the parent project.

  o Added Basic support for the BuildBox sandbox. The sand box will only be used if the
    environment variable BST_FORCE_SANDBOX is set to `buildbox`. This is the first step in
    transitioning to only using BuildBox for local sandboxing.

  o BREAKING CHANGE: The yaml API has been rewritten entirely. When accessing
    configuration from YAML, please use the new `Node` classes exposed in the
    `buildstream` package. See the documentation for how to use it.

    This change has also removed the need of a YAML cache as it proved to no longer
    be of benefit.

  o BREAKING CHANGE: `bst init` no longer uses the `--directory` or `-C`
    option. Instead, it (optionally) takes a directory as an argument.

  o BREAKING CHANGE: Artifact as a Proto. The caching of buildstream artifacts
    has changed from a reference based impelementation. Existing artifacts and
    artifact servers are not compatible, as such remote artifact servers need to
    be updated to the latest version which will then allow them to be repopulated
    with new artifacts.

  o BREAKING CHANGE: ostree plugin has been removed. It now leaves in the
    bst-plugins-experimental repo

  o Added `bst artifact delete` subcommand. This command removes artifacts from
    the local cache. Mulitple element names and artifact refs can be specified
    as arguments.

  o BREAKING CHANGE: The top level commands `checkout`, `push` and `pull` have